--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html> 
     <style> 
-#myDiv1{font: 500;font-family: 'Times New Roman', Times, serif;
-    width: 100%;height: auto;}
-    #wP{width: 100%;height: auto;}
+#myDiv1{font: 500;
+        font-family: 'Times New Roman', Times, serif;}
+    
+        #wP{width: 100%;height: auto;}
 
     </style>
 <head>
